--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 
 html,body{
-    height: 100%;
+    height: 50%;
     margin: 0;
     font: 20px 'Open sans', sans-serif;
     color: brown;
@@ -8,6 +8,7 @@ html,body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: rgb(226, 226, 226);
 }
 h1{
     margin: 10px 0;
@@ -15,11 +16,11 @@ h1{
     text-align: center;
 }
 form{
-    padding: 20px;
+    padding: 50px;
     background: #b8b8b9;
     border: 4px solid #AAA;
     border-radius: 5px;
-    width: 360px;
+    width: 460px;
     margin: 10px auto;
 }
 input{
