--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,8 +1,9 @@
 /* Global style*/
 html,body{
-    height: 50%;
+    height: 100%;
     margin: 0;
-    padding:0;
+    padding: 0;
+   
     font-family: Arial, sans-serif;
     background-color: rgb(226, 226, 226);
 }
@@ -11,16 +12,20 @@ html,body{
 header{
   background-color: #333;
   color: white;
-  padding: 20px 0;
-  text-align: center;
+  padding: 20px ;
+  align-items: left;
+  text-align: left;
 }
 header h1{
-    margin: 0;
+    margin: 0 auto;
+    text-align: center;
+    align-items: center;
 }
 nav ul{
     list-style: none;
     padding: 0;
     margin: 0;
+    align-items: center;
     text-align: center;
 }
 nav ul li{
@@ -29,19 +34,21 @@ nav ul li{
     font-weight: bold;
 }
 nav ul li a{
-  color:whit;
+  color:white;
   text-decoration: none;
   font-weight: bold;
 }
 nav ul li a:hover {
-  color: #ddd;
+  color: #ababab;
 }
 
 /* Main  */
 main {
   padding: 20px;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: auto;
+  align-items: center;
+
 }
 h2, h3 {
   color: #333;
@@ -79,8 +86,8 @@ h2, h3 {
 
 /* Form Style */
 form {
-  background-color: #fff;
-    padding: 20px;
+    background-color: #fff;
+    padding: 10px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 0 auto;
@@ -104,7 +111,7 @@ form input[type="email"]:focus {
     border-color: #5cb85c;
 }
 form button {
-  background-color: #5cb85c;
+  background-color: #187227;
   color: wheat;
   border: none;
   cursor: pointer;
@@ -115,16 +122,20 @@ form button:hover {
 
 /* Login page */
 .login-container {
-  display: flex;
+  display: flex; 
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #f9f9f9;
+  height: 120vh;
+  background-color: #c0c0c0;
 }
 h1 {
   text-align: center;
-  margin: 0;
+  margin: 20px;
   font-size: 2rem;
+}
+h2 {
+  text-align: center;
+  margin: 20px;
 }
 
 /* Dashboard page */
@@ -132,7 +143,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 300px;
 }
 
 /* Catalog page */
@@ -180,7 +191,7 @@ h1 {
 /* Footer */
 footer {
   text-align: center;
-  background-color: #333;
+  background-color: #000000;
   color: white;
   padding: 10px 0;
   position: relative;
