--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -137,6 +137,24 @@ h2 {
   text-align: center;
   margin: 20px;
 }
+/* Message form */
+.message{
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid red;
+  color: #721c24;
+  border-radius: 5px;
+}
+.message.error{
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  color: #721c24;
+}
+.message.success{
+  background-color: #d4edda;
+  border: 1px solid #c3e6cb;
+  color: #155724;
+}
 
 /* Dashboard page */
 .dashboard-container {
