--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -132,7 +132,7 @@ h2, h3 {
 .catalogo-table input[type="number"] {
   width: 60px;
   padding: 5px;
-  font-size: 14px;
+  font-size: 16px;
   border: 1px solid #ddd;
   border-radius: 5px;
   text-align: center;
@@ -141,21 +141,6 @@ h2, h3 {
   outline: none;
   border-color: #5cb85c;
 }
-/* pulsante aggiornamente integrato nella tabella 
-.catalogo-table .btn-update {
-  background-color: #5cb85c;
-  color: white;
-  padding: 5px 10px;
-  font-size: 14px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-.catalogo-table .btn-update:hover {
-  background-color: #31b0d5;
-}
-*/
 
 /* Form Style */
 form {
@@ -247,17 +232,19 @@ h2 {
 
 /* Pulsanti Dashboard */
 .btn {
-  display: inline-block;
-  padding: 10px 20px;
+  display: inline-flex;
+  padding: 20px 30px;
   background-color: #187277; /* colore sfondo */
   color: white; /* colore del testo */
   text-align: center;
   text-decoration: none; /* rimuove la sottolineatura */
-  border-radius: 5px; /* bordi arrotondati */
-  font-size: 16px;
+  border-radius: 10px; /* bordi arrotondati */
+  font-size: 18px;
   transition: background-color 0.3s ease; /* effetto passaggio mouse */
-  margin-top: 10px;
+  margin-top: 15px;
   margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 0;
 }
 .btn:hover {
   background-color: #0056b3;
@@ -279,21 +266,20 @@ h2 {
 
 /* Posiziona i pulsanti in basso a destra */
 .bottom-nav {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  background-color: rgba(0, 0, 0, 0.7); /* Sfondo semi-trasparente */
-  padding: 8px 12px;
-  border-radius: 10px;
-  width: auto;
-  box-sizing: border-box; /* affinchè il padding non influenzi la larghezza totale */
+  overflow: hidden;
+  position: right;
+  margin: auto;
+  padding: 20px 30px;
+  bottom: 25px;
+  width: 100%;
 }
 .bottom-nav ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 8px;
+  margin: auto;
+  padding: 14px 16px;
+  display: block;
+  font-size: 16px;
+  text-decoration: none;
 }
 .bottom-nav li {
   display: inline;
@@ -301,9 +287,9 @@ h2 {
 .bottom-nav a {
   color: white;
   text-decoration: none;
-  font-size: 14px;
-  padding: 8px 12px;
-  border-radius: 3px;
+  font-size: 16px;
+  padding: 20px 30px;
+  border-radius: 10px;
   background-color: #187277; /* Colore del pulsante */
   transition: background-color 0.3s ease;
 }
